# rust-man-blog

./: Cargo.toml  README.md  config.yml
src/: custom_resp.rs  error.rs  main.rs
src/api/: user.rs
src/config/: mod.rs  routes.rs  yml.rs
src/model/: blog.rs
